// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmfInputText with exactLength validation 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "exactLength": 2,
      }
    }
    value={null}
  />
</View>
`;

exports[`AmfInputText with exactLength validation 2`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {
          "borderColor": "red",
        },
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "exactLength": 2,
      }
    }
    value=""
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "red",
        "margin": 4,
        "marginBottom": 0,
      }
    }
  >
    Label harus 2 karakter
  </Text>
</View>
`;

exports[`AmfInputText with exactLength validation 3`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "exactLength": 2,
      }
    }
    value="ab"
  />
</View>
`;

exports[`AmfInputText with exactLength validation 4`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {
          "borderColor": "red",
        },
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "exactLength": 2,
      }
    }
    value="abC"
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "red",
        "margin": 4,
        "marginBottom": 0,
      }
    }
  >
    Label harus 2 karakter
  </Text>
</View>
`;

exports[`AmfInputText with maxLength validation 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "maxLength": 2,
      }
    }
    value={null}
  />
</View>
`;

exports[`AmfInputText with maxLength validation 2`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "maxLength": 2,
      }
    }
    value=""
  />
</View>
`;

exports[`AmfInputText with maxLength validation 3`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "maxLength": 2,
      }
    }
    value="ab"
  />
</View>
`;

exports[`AmfInputText with maxLength validation 4`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {
          "borderColor": "red",
        },
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "maxLength": 2,
      }
    }
    value="abC"
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "red",
        "margin": 4,
        "marginBottom": 0,
      }
    }
  >
    Label maksimum undefined karakter
  </Text>
</View>
`;

exports[`AmfInputText with minLength validation 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "minLength": 2,
      }
    }
    value={null}
  />
</View>
`;

exports[`AmfInputText with minLength validation 2`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {
          "borderColor": "red",
        },
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "minLength": 2,
      }
    }
    value=""
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "red",
        "margin": 4,
        "marginBottom": 0,
      }
    }
  >
    Label minimal 2 karakter
  </Text>
</View>
`;

exports[`AmfInputText with minLength validation 3`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "minLength": 2,
      }
    }
    value="ab"
  />
</View>
`;

exports[`AmfInputText with regex validation 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "regex": /e/,
      }
    }
    value={null}
  />
</View>
`;

exports[`AmfInputText with regex validation 2`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "regex": /e/,
      }
    }
    value=""
  />
</View>
`;

exports[`AmfInputText with regex validation 3`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "regex": /e/,
      }
    }
    value="test"
  />
</View>
`;

exports[`AmfInputText with regex validation 4`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {
          "borderColor": "red",
        },
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "regex": /e/,
      }
    }
    value="ups"
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "red",
        "margin": 4,
        "marginBottom": 0,
      }
    }
  >
    Format tidak sesuai
  </Text>
</View>
`;

exports[`AmfInputText with required validation 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "required": true,
      }
    }
    value={null}
  />
</View>
`;

exports[`AmfInputText with required validation 2`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {
          "borderColor": "red",
        },
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "required": true,
      }
    }
    value=""
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "red",
        "margin": 4,
        "marginBottom": 0,
      }
    }
  >
    Label tidak boleh kosong
  </Text>
</View>
`;

exports[`AmfInputText with required validation 3`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    validation={
      Object {
        "required": true,
      }
    }
    value="ab"
  />
</View>
`;

exports[`AmfInputText without validation 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#454545",
        "marginBottom": 8,
      }
    }
  >
    Label
  </Text>
  <TextInput
    label="Label"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderColor": "#DDDDDD",
          "borderRadius": 3,
          "borderWidth": 1,
          "color": "#9B9B9B",
          "fontSize": 14,
          "height": 40,
          "padding": 10,
          "paddingBottom": 10,
        },
        undefined,
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    value={null}
  />
</View>
`;
